--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,14 +4,14 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155315233637206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155322247537206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
--   云安全中心的版本信息，提供升级企业版、扩充资产规模和续费操作。
+-   云安全中心的版本信息，提供升级高级版、企业版、扩充资产规模和续费操作。
 -   **安全评分**：您资产的安全分值以及受保护和未受保护资产数量。具体评分分值参见安全分值表。
 
-    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/用户指南/接入云安全中心/安装Agent.md#)，将未受保护的资产接入云安全中心的安全防护内。
+    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/接入云安全中心/安装Agent.md#)，将未受保护的资产接入云安全中心的安全防护内。
 
 -   威胁统计数据：
     -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
@@ -24,10 +24,10 @@
 
 ## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
 
-云安全中心支持基础版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版和企业版支持的功能参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
+云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
 -   **基础版**：页面右上角显示云安全中心的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
--   **企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
+-   **高级版/企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
 
     **说明：** 如果当前服务器数量超过购买服务时配置的服务器数量，页面右上角会出现**扩充资产规模**操作按钮，提示您尽快扩充资产规模。
 
@@ -47,7 +47,7 @@
 |存在未修复漏洞。|修复漏洞，详见漏洞管理。|
 |存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
-|保护状态为离线（Agent未安装或离线）。|[安装Agent](intl.zh-CN/用户指南/接入云安全中心/安装Agent.md#)。|
+|保护状态为离线（Agent未安装或离线）。|[ZH-CN\_TP\_13631.md\#](intl.zh-CN/接入云安全中心/安装Agent.md#)。|
 |存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../../intl.zh-CN/.md#)。|
 |存在系统软件漏洞。|修复[软件漏洞](../../../../../intl.zh-CN/.md#)。|
 |基线检查存在风险。|修复[基线检查](../../../../../intl.zh-CN/用户指南/安全预防/基线检查.md#)漏洞。|
