--- a/intl.zh-CN/用户指南/安全告警/安全告警类型.md
+++ b/intl.zh-CN/用户指南/安全告警/安全告警类型.md
@@ -26,7 +26,7 @@
 |**恶意进程（病毒云查杀）**|采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](intl.zh-CN/用户指南/安全告警/病毒云查杀.md#)。|
 |**异常网络连接**|网络显示断开或不正常的网络连接状态。|
 |**异常账号**|非合法登陆账号。|
-|**云产品威胁检测**|态势感知检测到您购买的其他阿里云产品存在的威胁。|
+|**云产品威胁检测**|云安全中心检测到您购买的其他阿里云产品存在的威胁。|
 |**精准防御**|开启**病毒查杀**提供精准防御能力，可对主流勒索病毒、DDOS木马、挖矿和木马程序、恶意程序、后门程序和蠕虫病毒等类型进行防御。|
 |**应用入侵事件**|通过系统的应用组件入侵服务器的告警事件。|
 |**其他**|DDOS流量攻击等网络入侵行为。|
