--- a/intl.zh-CN/用户指南/安全告警/安全告警设置.md
+++ b/intl.zh-CN/用户指南/安全告警/安全告警设置.md
@@ -4,9 +4,9 @@
 
 ## 操作步骤 {#section_bys_bsj_zdb .section}
 
-**说明：** 高级登录报警只有在企业版服务中提供，允许您配置更精细的异常登录检测，例如设置合法登录的IP、时间、账号。在态势感知控制台**总览**页面查看您的服务器是否属于企业版。
+**说明：** 高级登录报警只有在高级版和企业版服务中提供，允许您配置更精细的异常登录检测，例如设置合法登录的IP、时间、账号。在云安全中心控制台**总览**页面查看您的服务器是否属于**高级版**或**企业版**。
 
-1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏，选择**安全告警**。
 3.  单击页面右上角**安全告警设置**，完成以下配置：
     -   **添加常用登录地**
@@ -20,14 +20,14 @@
         -   单击一个常用登录地下的**删除**，删除该常用登录地配置。
     -   **配置高级登录报警**
 
-        **说明：** 使用高级登录告警，您可以进一步指定合法的登录IP、时间段、和账号，态势感知会对指定外的登录情形进行告警。以下功能的操作类似**常用登录地**配置，您可以参考上文进行**添加**、**编辑**、**删除**。
+        **说明：** 使用高级登录告警，您可以进一步指定合法的登录IP、时间段、和账号，云安全中心会对指定外的登录情形进行告警。以下功能的操作类似**常用登录地**配置，您可以参考上文进行**添加**、**编辑**、**删除**。
 
         -   单击**合法登录IP**右侧的切换开关，开启/关闭登录IP检查，开启后通过非指定IP登录会触发报警。
         -   单击**合法登录时间**右侧的切换开关，开启/关闭登录时间检查，开启后在非指定时间登录会触发报警。
         -   单击**合法账号**右侧的切换开关，开启/关闭登录账号检查，开启后使用非指定账号登录会触发报警。
     -   **自定义Web目录**
 
-        态势感知会自动检测您服务器资产中的Web目录，并进行动态检测和静态扫描；您也可以手动添加服务器中的其它Web目录进行检测扫描。
+        云安全中心会自动检测您服务器资产中的Web目录，并进行动态检测和静态扫描；您也可以手动添加服务器中的其它Web目录进行检测扫描。
 
         1.  单击**Web目录定义**下的**添加**。
         2.  输入一个合法的Web路径，然后选择生效服务器，该路径将被添加为扫描路径的服务器。
