--- a/intl.zh-CN/用户指南/安全告警/告警自动化关联分析.md
+++ b/intl.zh-CN/用户指南/安全告警/告警自动化关联分析.md
@@ -1,6 +1,6 @@
 # 告警自动化关联分析 {#concept_slf_kbx_bgb .concept}
 
-云安全中心**企业版**支持告警自动化关联分析。您可在安全告警列表页面单击单个告警事件名称进入告警自动关联分析页面、查看和处理告警事件所有关联的异常情况并进行攻击自动溯源，帮助您对告警事件进行全方位分析和便捷处理。
+云安全中心**高级版**和**企业版**支持告警自动化关联分析。您可在安全告警列表页面单击单个告警事件名称进入告警自动关联分析页面、查看和处理告警事件所有关联的异常情况并进行攻击自动溯源，帮助您对告警事件进行全方位分析和便捷处理。
 
 ## 告警自动关联分析功能特性 {#section_ash_2fn_bgb .section}
 
@@ -8,7 +8,7 @@
 -   告警自动化关联以告警发生的时间顺序聚合成关联的告警，帮助您更便捷地分析和处理告警事件，提升您系统的应急响应机制。
 -   可对攻击进行自动溯源并提供原始数据预览，帮助您快速发现入侵原因和对弱点进行修复。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155315285333909_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155322305533909_zh-CN.png)
 
 ## 操作步骤 {#section_g2v_wdx_bgb .section}
 
@@ -19,15 +19,15 @@
     -   查看告警详细信息：您可查看受该告警事件影响的资产信息、告警开始/结束时间、关联异常事件的详情。
     -   查看受影响资产：单击**受影响的资产**名称可跳转到对应资产的详情页面，方便您集中查看该资产的全部告警信息、漏洞信息、基线检查漏洞和资产指纹等信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155315285333910_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155322305533910_zh-CN.png)
 
     -   查看和处理**关联异常**：您可在**关联异常**区域查看该告警事件关联的所有异常情况的详细信息、建议处理方案和处理方式。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155315285333911_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155322305533911_zh-CN.png)
 
         -   **确认线下处理**：确认告警并线下进行处理后，单击该操作后该告警状态将变为**已处理**。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155315285335082_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155322305535082_zh-CN.png)
 
         -   **忽略本次**：忽略本次告警，该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。
         -   **标记为误报**：标记本次告警为误报后该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消标记误报**的操作。
