--- a/cn.zh-CN/API参考/告警事件API/调用方式.md
+++ b/cn.zh-CN/API参考/告警事件API/调用方式.md
@@ -1,10 +1,10 @@
 # 调用方式 {#concept_zlz_t2j_ygb .concept}
 
-您可以通过发送HTTP GET请求调用态势感知API，并按照接口说明在请求中加入相应的请求参数。调用接口后系统会返回处理结果。请求和返回结果都使用UTF-8字符集进行编码。
+您可以通过发送HTTP GET请求调用云安全中心API，并按照接口说明在请求中加入相应的请求参数。调用接口后系统会返回处理结果。请求和返回结果都使用UTF-8字符集进行编码。
 
 ## 请求结构 {#section_mqj_q3f_mdb .section}
 
-态势感知的API是PRC风格，您可以通过发送HTTP GET请求调用态势感知API。
+云安全中心的API是PRC风格，您可以通过发送HTTP GET请求调用云安全中心API。
 
 其请求结构如下：
 
@@ -14,9 +14,9 @@ https://Endpoint/?Action=xx&Parameters
 
 其中：
 
--   Endpoint：态势感知API的服务接入地址为tds.aliyuncs.com。
+-   Endpoint：云安全中心API的服务接入地址为tds.aliyuncs.com。
 -   Action：要执行的操作，如使用DescribeAlarmEventList查询安全事件列表。
--   Version：要使用的API版本，态势感知的API版本是2018-12-03。
+-   Version：要使用的API版本，云安全中心的API版本是2018-12-03。
 -   Parameters：请求参数，每个参数之间用“&”分隔。
 
     请求参数由公共请求参数和API自定义参数组成。公共参数中包含API版本号、身份验证等信息，详细内容参见[公共参数](intl.zh-CN/API参考/告警事件API/公共参数.md#)。
@@ -41,13 +41,13 @@ http(s)://tds.aliyuncs.com/?Action=DescribeAlarmEventList
 
 ## API授权 {#section_mlp_qmf_mdb .section}
 
-为了确保您的账号安全，建议您使用子账号的身份凭证调用API。如果您使用RAM账号调用态势感知API，您需要为该RAM账号创建、附加相应的授权策略。
+为了确保您的账号安全，建议您使用子账号的身份凭证调用API。如果您使用RAM账号调用云安全中心API，您需要为该RAM账号创建、附加相应的授权策略。
 
 ## API签名 {#section_jtc_ymf_mdb .section}
 
-态势感知服务会对每个API请求进行身份验证，无论使用HTTP还是HTTPS协议提交请求，都需要在请求中包含签名（Signature）信息。
+云安全中心服务会对每个API请求进行身份验证，无论使用HTTP还是HTTPS协议提交请求，都需要在请求中包含签名（Signature）信息。
 
-态势感知通过使用AccessKey ID和AccessKey Secret进行对称加密的方法来验证请求的发送者身份。AccessKey是为阿里云账号和RAM用户发布的一种身份凭证（类似于用户的登录密码），其中AccessKey ID 用于标识访问者的身份，AccessKey Secret是用于加密签名字符串和服务器端验证签名字符串的密钥，必须严格保密。
+云安全中心通过使用AccessKey ID和AccessKey Secret进行对称加密的方法来验证请求的发送者身份。AccessKey是为阿里云账号和RAM用户发布的一种身份凭证（类似于用户的登录密码），其中AccessKey ID 用于标识访问者的身份，AccessKey Secret是用于加密签名字符串和服务器端验证签名字符串的密钥，必须严格保密。
 
 RPC API需按如下格式在请求中增加签名（Signature）：
 
