--- a/intl.zh-CN/产品定价/购买云安全中心.md
+++ b/intl.zh-CN/产品定价/购买云安全中心.md
@@ -11,12 +11,13 @@
         **说明：** 如果您预计在购买时长内，要防护的服务器总数将会增加，建议您在此处选择预计当前账号下将会拥有的服务器总数。
 
     -   **版本选择**：选择您需要的版本，不同版本功能介绍参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
+    -   **防篡改**：增值服务，如果勾选则包含在服务范围内。可实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改。
     -   **全量日志**：增值服务，如果勾选则包含在服务范围中。提供主机日志、网络日志等10类安全日志的全量日志检索服务，用于事件回溯和安全分析。
 3.   选择**购买时长**，并勾选是否需要**自动续费**。 
 
     **说明：** 
 
-    -   资产规模不足6台时，最小购买时长为1年；资产规模是6台至10台时，最小购买时长为3个月；资产规模大于10台时，最小购买时长为1个月。
+    -   资产规模不足10台时，最小购买时长为6个月；资产规模大于10台时，最小购买时长为1个月。
     -   勾选自动续费后，自动续费周期与购买时长对应，即按月购买的自动续费周期为一个月，按年购买的自动续费周期是一年。
 4.   单击**立即购买**，并完成支付。 
 
