--- a/intl.zh-CN/快速入门/快速入门.md
+++ b/intl.zh-CN/快速入门/快速入门.md
@@ -5,11 +5,11 @@
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。 
 2.  为要防护的服务器安装云安全中心Agent插件，来接入云安全中心。 
 
-    **说明：** Agent插件是云安全中心提供的本地安全插件，您必须在要防护的服务器上安装该插件才能使其接入云安全中心。您可参考[安装Agent](../../../../../intl.zh-CN/用户指南/接入云安全中心/安装Agent.md#)为您的非阿里云服务器手动安装云安全中心Agent插件。
+    **说明：** Agent插件是云安全中心提供的本地安全插件，您必须在要防护的服务器上安装该插件才能使其接入云安全中心。您可参考[安装Agent](../../../../../intl.zh-CN/接入云安全中心/安装Agent.md#)为您的非阿里云服务器手动安装云安全中心Agent插件。
 
 3.  云安全中心Agent插件安装成功后，您可以在云安全中心总览页面查看当前阿里云账号下的服务器安全状态，以及安全告警事件、主机漏洞扫描结果、系统配置风险数量。 
 
-    **说明：** 服务器安全状态通过云安全中心Agent收集、检测得出，您可参考被防护服务器的保护状态确认云安全中心Agent的在线/离线状态。服务器的安全状态是保护中，说明Agent在线；服务器的安全状态是未受保护，说明Agent离线，您可以参考[Agent离线排查](../../../../../intl.zh-CN/用户指南/接入云安全中心/Agent离线排查.md#)检查离线原因。
+    **说明：** 服务器安全状态通过云安全中心Agent收集、检测得出，您可参考被防护服务器的保护状态确认云安全中心Agent的在线/离线状态。服务器的安全状态是保护中，说明Agent在线；服务器的安全状态是未受保护，说明Agent离线，您可以参考[Agent离线排查](../../../../../intl.zh-CN/接入云安全中心/Agent离线排查.md#)检查离线原因。
 
 4.  您可在云安全中心控制台查看并处理服务器上的弱点及安全事件，提升服务器的安全性： 
     -   定位到资产列表页面，查看当前阿里云账号下的服务器的安全状态明细，您也可以为服务器资产添加标签、进行分组，以便于管理。详细功能介绍，请参考[资产列表](../../../../../intl.zh-CN/用户指南/资产列表.md#)。
@@ -17,11 +17,10 @@
     -   定位到**漏洞管理**页面，查看和修复服务器上的[Linux漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/Linux软件漏洞.md#)、[Windows漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/Windows系统漏洞.md#)、[Web-CMS漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/Web-CMS漏洞.md#)和[应急漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)等。
     -   定位到**基线配置核查** \> **主机基线**页面，查看并处理态势感知检测到服务器上的配置风险项。详细功能介绍，请参考[主机基线检查](../../../../../intl.zh-CN/用户指南/基线检查/基线检查概述.md#)。
     -   定位到**更多功能** \> **资产指纹**页面，查看资产清点信息，包括服务器中运行的进程、启用的系统账号、开放的端口、使用的软件版本、网站后台登录情况。详细功能介绍，请参考[资产指纹](../../../../../intl.zh-CN/用户指南/资产指纹.md#)。
-    -   定位到**更多功能** \> **日志检索**页面，搜索相应日志记录，支持的日志源包括进程日志、网络日志、登录及账号日志等10种类型。详细功能介绍，请参考[使用日志检索](../../../../../intl.zh-CN/用户指南/日志检索/使用日志检索.md#)。
     -   为了更加灵活地使用以上功能，您也可以在云安全中心控制台进行相关设置。定位到设置页面，进行以下配置：
 
         -   安装/卸载云安全中心Agent插件
         -   配置告警通知策略
-        详细功能介绍，请参考[云安全中心设置功能](../../../../../intl.zh-CN/用户指南/设置.md#)。
+        详细功能介绍，请参考[安全配置](../../../../../intl.zh-CN/用户指南/设置/安全配置.md#)。
 
 
