--- a/intl.zh-CN/用户指南/日志分析/限制说明.md
+++ b/intl.zh-CN/用户指南/日志分析/限制说明.md
@@ -1,6 +1,12 @@
 # 限制说明 {#concept_b5x_z2y_kfb .concept}
 
-云安全中心全量日志集中存放在`sas-log`专属日志库中，您可以在储存日志服务的项目`sas-log-阿里云账户ID-区域名`中找到专属日志库。
+云安全中心全量日志集中存放在专属**Logstore**（日志库）中，您可以在日志服务控制台储存云安全中心日志服务的项目`sas-log-阿里云账户ID-区域名`中找到专属Logstore。
+
+云安全中心开通日志分析后，系统会自动在日志服务控制台创建专属于云安全中心的logstore（logstore名称sas-log）并存储云安全中心的日志数据，请您注意不要误删。
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23593/155425998443150_zh-CN.png)
+
+**说明：** 如误删Logstore，后台会提示“sas-log日志库不存在”，并且您当前的所有日志数据会丢失。您需提交工单重置处理。重置后您需重新开通日志分析服务后才可继续使用日志分析。已丢失的日志数据无法恢复。
 
 ## 日志库限制说明 {#section_ecs_2fy_kfb .section}
 
