--- a/cn.zh-CN/用户指南/总览.md
+++ b/cn.zh-CN/用户指南/总览.md
@@ -4,40 +4,32 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155301418337206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155428560337206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
--   云安全中心的版本信息，提供升级企业版、扩充资产规模和续费操作。
+-   云安全中心的版本信息，提供升级高级版、企业版、扩充资产规模和续费操作。
 -   **安全评分**：您资产的安全分值以及受保护和未受保护资产数量。具体评分分值参见安全分值表。
 
-    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](cn.zh-CN/用户指南/接入云安全中心/安装Agent.md#)，将未受保护的资产接入云安全中心的安全防护内。
+    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/接入云安全中心/安装Agent.md#)，将未受保护的资产接入云安全中心的安全防护内。
 
 -   威胁统计数据：
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/15530141836873_zh-CN.png)
-
-    -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](cn.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
-    -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](cn.zh-CN/用户指南/攻击分析.md#)页面。
-    -   **应急漏洞**：显示资产中最新发现的[应急漏洞](cn.zh-CN/用户指南/漏洞管理/应急漏洞.md#)信息。
-    -   **基线检查**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线风险总数值可跳转到[基线检查](cn.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
+    -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
+    -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
+    -   **应急漏洞**：显示资产中最新发现的[应急漏洞](intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)信息。
+    -   **基线检查**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线风险总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
 -   **云平台最佳安全实践**：检测到的云产品基线风险信息。
 -   **安全运营**：展示一周内已处理的告警、漏洞、基线配置数量柱状图。
 -   已开通的云盾安全产品信息。
 
 ## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
 
-云安全中心支持基础版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版和企业版支持的功能参见[功能特性](../../../../../cn.zh-CN/产品简介/功能特性.md#)。
+云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
 -   **基础版**：页面右上角显示云安全中心的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/15530141836876_zh-CN.png)
-
--   **企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
+-   **高级版/企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
 
     **说明：** 如果当前服务器数量超过购买服务时配置的服务器数量，页面右上角会出现**扩充资产规模**操作按钮，提示您尽快扩充资产规模。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/15530141836868_zh-CN.png)
 
 
 ## 安全分值表 {#section_jxm_rrk_wfb .section}
@@ -53,19 +45,13 @@
 |------|----|
 |缺少安全运营中心。|建立纵深防御体系。如有疑问请提交工单了解详情。|
 |存在未修复漏洞。|修复漏洞，详见漏洞管理。|
-|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](cn.zh-CN/用户指南/安全告警/安全告警类型.md#)。|
+|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
-|保护状态为离线（Agent未安装或离线）。|[安装Agent](cn.zh-CN/用户指南/接入云安全中心/安装Agent.md#)。|
-|存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../../cn.zh-CN/.md#)。|
-|存在系统软件漏洞。|修复[软件漏洞](../../../../../cn.zh-CN/.md#)。|
-|基线检查存在风险。|修复[基线检查](../../../../../cn.zh-CN/用户指南/安全预防/基线检查.md#)漏洞。|
-|存在异常登录事件。|查看并处理[异常登录](../../../../../cn.zh-CN/用户指南/入侵检测/异常登录.md#)。|
-|存在网站后门威胁。|查看和处理[网站后门](../../../../../cn.zh-CN/用户指南/入侵检测/网站后门.md#)文件。|
+|保护状态为离线（Agent未安装或离线）。|[ZH-CN\_TP\_13631.md\#](intl.zh-CN/接入云安全中心/安装Agent.md#)。|
+|存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../../intl.zh-CN/.md#)。|
+|存在系统软件漏洞。|修复[软件漏洞](../../../../../intl.zh-CN/.md#)。|
+|基线检查存在风险。|修复基线检查漏洞。|
+|存在异常登录事件。|查看并处理[异常登录](../../../../../intl.zh-CN/用户指南/入侵检测/异常登录.md#)。|
+|存在网站后门威胁。|查看和处理[网站后门](../../../../../intl.zh-CN/用户指南/入侵检测/网站后门.md#)文件。|
 |存在主机异常。|对主机异常事件进行处理。|
-
-## 更多信息 {#section_dzg_qrl_lgb .section}
-
-如果您需要安全专家帮助提升系统安全性，可使用安全加固服务。在您授权后，专业安全工程师为您修复安全基线、漏洞、排查系统潜在安全威胁，提升资产安全性。
-
-详细信息参见[安全加固](https://www.aliyun.com/product/xianzhi_securityconsolidate)。
 
