--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,7 +4,7 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155322247537206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155428560337206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
@@ -50,7 +50,7 @@
 |保护状态为离线（Agent未安装或离线）。|[ZH-CN\_TP\_13631.md\#](intl.zh-CN/接入云安全中心/安装Agent.md#)。|
 |存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../../intl.zh-CN/.md#)。|
 |存在系统软件漏洞。|修复[软件漏洞](../../../../../intl.zh-CN/.md#)。|
-|基线检查存在风险。|修复[基线检查](../../../../../intl.zh-CN/用户指南/安全预防/基线检查.md#)漏洞。|
+|基线检查存在风险。|修复基线检查漏洞。|
 |存在异常登录事件。|查看并处理[异常登录](../../../../../intl.zh-CN/用户指南/入侵检测/异常登录.md#)。|
 |存在网站后门威胁。|查看和处理[网站后门](../../../../../intl.zh-CN/用户指南/入侵检测/网站后门.md#)文件。|
 |存在主机异常。|对主机异常事件进行处理。|
