--- a/cn.zh-CN/用户指南/总览.md
+++ b/cn.zh-CN/用户指南/总览.md
@@ -1,24 +1,24 @@
 # 总览 {#concept_jxf_z34_k2b .concept}
 
-云安全中心**总览**页作为阿里云云平台的安全运营中心，实时展示了您所有资产的威胁概览信息和安全评分信息、以及您开通的所有云盾安全服务，并提供升级、续费、扩充资产规模、调整接收通知规则等设置功能。
+云安全中心**总览**页作为阿里云云平台的安全运营中心，实时展示了您所有资产的威胁概览信息和安全评分信息、以及您开通的所有云盾安全服务，并提供升级、续费、扩充资产规模、调整接收通知规则等设置功能，帮助您对资产进行统一的安全管控。
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155428560337206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155482336437206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
 -   云安全中心的版本信息，提供升级高级版、企业版、扩充资产规模和续费操作。
--   **安全评分**：您资产的安全分值以及受保护和未受保护资产数量。具体评分分值参见安全分值表。
+-   **安全评分**：您资产的安全分值以及受保护/未受保护资产数量。具体评分分值参见安全分值表。
 
-    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/接入云安全中心/安装Agent.md#)，将未受保护的资产接入云安全中心的安全防护内。
+    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[接入云安全中心](../../../../../intl.zh-CN/接入云安全中心/接入云安全中心.md#)将未受保护的资产接入云安全中心的安全防护内。
 
 -   威胁统计数据：
     -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
     -   **应急漏洞**：显示资产中最新发现的[应急漏洞](intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)信息。
     -   **基线检查**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线风险总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
--   **云平台最佳安全实践**：检测到的云产品基线风险信息。
+-   **云平台最佳安全实践**：检测到的云产品基线配置存在的风险。
 -   **安全运营**：展示一周内已处理的告警、漏洞、基线配置数量柱状图。
 -   已开通的云盾安全产品信息。
 
@@ -44,10 +44,10 @@
 |安全分扣分项|加固建议|
 |------|----|
 |缺少安全运营中心。|建立纵深防御体系。如有疑问请提交工单了解详情。|
-|存在未修复漏洞。|修复漏洞，详见漏洞管理。|
+|存在未修复漏洞。|修复漏洞，详见[漏洞管理](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。|
 |存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
-|保护状态为离线（Agent未安装或离线）。|[ZH-CN\_TP\_13631.md\#](intl.zh-CN/接入云安全中心/安装Agent.md#)。|
+|保护状态为离线（Agent未安装或离线）。|[安装Agent](../../../../../intl.zh-CN/接入云安全中心/Agent说明.md#)。|
 |存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../../intl.zh-CN/.md#)。|
 |存在系统软件漏洞。|修复[软件漏洞](../../../../../intl.zh-CN/.md#)。|
 |基线检查存在风险。|修复基线检查漏洞。|
