--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,14 +4,14 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155503871337206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155529284537206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
 -   云安全中心的版本信息，提供升级高级版、企业版、扩充资产规模和续费操作。
 -   **安全评分**：您资产的安全分值以及受保护/未受保护资产数量。具体评分分值参见安全分值表。
 
-    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[接入云安全中心](../../../../../intl.zh-CN/接入云安全中心/接入云安全中心.md#)将未受保护的资产接入云安全中心的安全防护内。
+    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照将未受保护的资产接入云安全中心的安全防护内。
 
 -   威胁统计数据：
     -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
