--- a/cn.zh-CN/产品简介/新功能发布动态.md
+++ b/cn.zh-CN/产品简介/新功能发布动态.md
@@ -7,6 +7,6 @@
 |2019-03-21|态势感知全新升级为云安全中心。|基础版、高级版、企业版|[什么是云安全中心](intl.zh-CN/产品简介/什么是云安全中心.md#)|
 |2018-12-28|攻击、访问、威胁功能下线。|企业版|-|
 |2018-12-20|基础版威胁检测能力只支持**异常登录**和**其他-DDoS**类型安全告警；企业版不受影响。|基础版|[功能特性说明](intl.zh-CN/产品简介/功能特性.md#)|
-|2018-12-15|支持攻击分析和溯源。|企业版|[攻击分析](../../../../../intl.zh-CN/用户指南/攻击分析.md#)|
-|2018-12-10|支持告警自动化关联分析。|企业版|[告警自动化关联分析](../../../../../intl.zh-CN/用户指南/安全告警/告警自动化关联分析.md#)|
+|2018-12-15|支持攻击分析和溯源。|企业版|[攻击分析](../../../../intl.zh-CN/用户指南/攻击分析.md#)|
+|2018-12-10|支持告警自动化关联分析。|企业版|[告警自动化关联分析](../../../../intl.zh-CN/用户指南/安全告警/告警自动化关联分析.md#)|
 
