--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,27 +4,28 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155529284537206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155589595237206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
 -   云安全中心的版本信息，提供升级高级版、企业版、扩充资产规模和续费操作。
 -   **安全评分**：您资产的安全分值以及受保护/未受保护资产数量。具体评分分值参见安全分值表。
 
-    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照将未受保护的资产接入云安全中心的安全防护内。
+    单击**立即处理**可展开安全风险处理页面，您可根据页面的提示参考对应的帮助文档或直接对风险立即处理。
 
--   威胁统计数据：
-    -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
+    单击**未保护资产**下的数字，可以跳转到安装/卸载插件页面，您可以将未受保护的资产接入云安全中心的安全防护内。
+
+-   查看威胁统计数据：
+    -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
+    -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。
+    -   **基线问题**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线问题总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
-    -   **应急漏洞**：显示资产中最新发现的[应急漏洞](intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)信息。
-    -   **基线检查**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线风险总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
--   **云平台最佳安全实践**：检测到的云产品基线配置存在的风险。
--   **安全运营**：展示一周内已处理的告警、漏洞、基线配置数量柱状图。
--   已开通的云盾安全产品信息。
+-   **云安全最佳实践检查**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云安全最佳实践检查页面。
+-   **安全运营**：展示15天内已处理的告警、漏洞、基线配置数量柱状图和趋势图。
 
 ## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
 
-云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
+云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
 -   **基础版**：页面右上角显示云安全中心的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
 -   **高级版/企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
@@ -47,11 +48,11 @@
 |存在未修复漏洞。|修复漏洞，详见[漏洞管理](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。|
 |存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
-|保护状态为离线（Agent未安装或离线）。|[安装Agent](../../../../../intl.zh-CN/接入云安全中心/Agent说明.md#)。|
-|存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../../intl.zh-CN/.md#)。|
-|存在系统软件漏洞。|修复[软件漏洞](../../../../../intl.zh-CN/.md#)。|
+|保护状态为离线（Agent未安装或离线）。|[安装Agent](../../../../intl.zh-CN/接入云安全中心/Agent说明.md#)。|
+|存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../intl.zh-CN/.md#)。|
+|存在系统软件漏洞。|修复[软件漏洞](../../../../intl.zh-CN/.md#)。|
 |基线检查存在风险。|修复基线检查漏洞。|
-|存在异常登录事件。|查看并处理[异常登录](../../../../../intl.zh-CN/用户指南/入侵检测/异常登录.md#)。|
-|存在网站后门威胁。|查看和处理[网站后门](../../../../../intl.zh-CN/用户指南/入侵检测/网站后门.md#)文件。|
+|存在异常登录事件。|查看并处理[异常登录](../../../../intl.zh-CN/用户指南/入侵检测/异常登录.md#)。|
+|存在网站后门威胁。|查看和处理[网站后门](../../../../intl.zh-CN/用户指南/入侵检测/网站后门.md#)文件。|
 |存在主机异常。|对主机异常事件进行处理。|
 
