--- a/intl.zh-CN/用户指南/日志分析/使用前必读.md
+++ b/intl.zh-CN/用户指南/日志分析/使用前必读.md
@@ -4,14 +4,13 @@
 
 云安全中心开通日志分析后，系统会自动在日志服务控制台创建专属于云安全中心的logstore（logstore名称sas-log）并存储云安全中心的日志数据，请您注意不要误删。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23593/155566743743150_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23593/155611262743150_zh-CN.png)
 
 **说明：** 如误删Logstore，后台会提示“sas-log日志库不存在”，并且您当前的所有日志数据会丢失。您需提交工单重置处理。重置后您需重新开通日志分析服务后才可继续使用日志分析。已丢失的日志数据无法恢复。
 
 ## 日志库限制说明 {#section_ecs_2fy_kfb .section}
 
 -   您无法通过API/SDK等方式在数据库中写入数据，或者修改日志库的属性（例如存储周期等）。
--   开通云安全中心日志服务需要先付费购买后再开通SLS日志服务。开通日志服务SLS不会收取额外费用。
+-   开通云安全中心日志服务需要先付费购买后再开通SLS日志服务。
 -   内置的报表可能会在以后更新并升级。
--   日志最大存储容量为50T，日志数据过50T后将无法再存入新日志。建议您定期[导出日志](intl.zh-CN/用户指南/日志分析/导出日志.md#)进行备份并清理存储空间。
 
