--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -4,10 +4,10 @@
 
 -   **基础版**免费为您提供基础**安全加固**能力，可检测主机异常登录及DDoS攻击、服务器漏洞和应急漏洞、以及云产品安全配置。您在购买ECS实例时选择**安全加固**即可开通基础版。
 
-    **说明：** 2018年12月20日起，云安全中心基础版只支持**异常登录**和**DDoS**类型安全告警。
+    **说明：** 您可通过[云安全中心产品页面](https://www.aliyun.com/product/sas)单击**免费试用**，试用**企业版**功能，了解更多高级威胁检测能力。
 
--   **高级版**按照包年包月方式收取服务费用，提供安全告警、漏洞检测及修复、日志分析等安全服务。
--   **企业版**按照包年包月方式收取服务费用，提供安全告警、漏洞检测及修复、基线检查、资产指纹等全面的安全服务。
+-   **高级版**按照包年包月方式收取服务费用，提供安全告警、漏洞检测及修复、安全报告等安全服务。
+-   **企业版**按照包年包月方式收取服务费用，提供安全告警、漏洞检测及修复、基线检查、资产指纹、攻击分析、等全面的安全服务。
 
 ## 云安全中心基础版、高级版和企业版功能对比 {#section_gmh_xvb_zdb .section}
 
@@ -86,6 +86,7 @@
 |【漏洞修复】支持一键下载补丁文件并静默安装更新，需要重启的漏洞会进行提醒。|X|√|√|
 |漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|√|
 |【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|X|√|√|
+|漏洞管理|应急漏洞|【应急漏洞检测】临时提供针对网络上突然出现的紧急漏洞的检测和修复服务。|√|√|√|
 |基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。 【主机基线检查范围】
 
 -   账号安全：检测密码策略合规、系统及应用弱口令等。
@@ -98,6 +99,16 @@
  |X|X|√|
 |攻击分析|攻击分析|【攻击分析】支持查看系统遭受的Web攻击详情和ECS遭受的暴力破解攻击等攻击信息。|X|X|√|
 |AK和账号密码泄露|AK和账号密码泄露|实时监控Github等第三方代码托管网站，捕获并判定被公开的源代码（包含企业员工私自上传并不小心公开的源代码）中是否含有ECS、RDS、Redis、MySQL等资产的登录名和密码信息。|X|X|√|
+|云平台最佳实践|云平台最佳实践|【云平台最佳实践】检测ECS、RDS等云产品的安全配置是否存在安全隐患。 【检查范围】
+
+-   ECS：检测安全组端口访问策略是否过宽。
+-   SLB：检测是否转发不必要的端口至公网，增加系统受攻击风险。
+-   RDS：检测数据库是否公开在外网，以及是否配置访问白名单。
+-   Actiontrail：是否开启了操作日志审计，便于日志回溯。
+-   MFA：是否开启了双因素认证登录，防止阿里云账号被破解。
+-   其他：检测SLB白名单、RDS加密通信等。
+
+ |√|√|√|
 |日志分析|全量日志分析|基于SLS日志，提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等量原始日志检索和分析。|X|增值|增值|
 |资产指纹|资产指纹|【端口】收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。 【账号】收集账号及对应权限信息，可清点特权账号，检测提权行为。
 
@@ -108,6 +119,7 @@
  【网站后台】识别网站后台资产，监控是否有撞库和异常网站后台登录行为。
 
  |X|X|√|
+|应用市场|可视化态势|支持查看业务运营监控、安全应急响应中心、安全感知体系、安全防御体系大图、业务访客概览等多种数据大屏，并支持组件自定义。|X|增值|增值|
 |应用市场|自定义告警|支持用户自定义告警规则，实时检测威胁，支持第三方日志导入进行实时分析。|X|增值|增值|
 |应用市场|网页防篡改|可实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。|X|增值|增值|
 |应用市场|微步威胁情报|提供第三方威胁情报源。|X|增值|增值|
