--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,7 +4,7 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155589595237206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155805655337206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
@@ -16,8 +16,8 @@
     单击**未保护资产**下的数字，可以跳转到安装/卸载插件页面，您可以将未受保护的资产接入云安全中心的安全防护内。
 
 -   查看威胁统计数据：
-    -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
-    -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。
+    -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警处理/安全告警类型.md#)页面。
+    -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。详见[漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。
     -   **基线问题**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线问题总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
 -   **云安全最佳实践检查**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云安全最佳实践检查页面。
@@ -27,7 +27,7 @@
 
 云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
--   **基础版**：页面右上角显示云安全中心的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
+-   **基础版**：页面右上角显示云安全中心的版本信息和**升级**按钮。升级到高级版或企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
 -   **高级版/企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
 
     **说明：** 如果当前服务器数量超过购买服务时配置的服务器数量，页面右上角会出现**扩充资产规模**操作按钮，提示您尽快扩充资产规模。
@@ -37,16 +37,16 @@
 
 |安全分值|分值说明|
 |----|----|
-|95-100|您的资产安全状态良好。|
-|85-94|您的资产存在安全隐患，建议您尽快加固安全防护体系。|
-|70-84|您的资产存在较多安全隐患，建议您及时加固安全防护体系。|
-|69分以下|您的资产防御黑客入侵的能力很弱，建议您尽快加固安全防护体系。|
+|95-100|恭喜您，您的资产当前安全隐患较少，建议您及时关注安全。|
+|85-94|您的资产检测出多条安全风险，已经存在安全隐患，可被黑客利用入侵主机，请您尽快处理。|
+|70-84|您的资产存检测出多条安全风险，已经存在安全隐患，可被黑客利用入侵主机，请您尽快处理。|
+|69分以下|您的资产检测出多条安全风险，已经暴露在黑客入侵和病毒感染的威胁下，请您尽快处理。|
 
 |安全分扣分项|加固建议|
 |------|----|
 |缺少安全运营中心。|建立纵深防御体系。如有疑问请提交工单了解详情。|
 |存在未修复漏洞。|修复漏洞，详见[漏洞管理](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。|
-|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)。|
+|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警处理/安全告警类型.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
 |保护状态为离线（Agent未安装或离线）。|[安装Agent](../../../../intl.zh-CN/接入云安全中心/Agent说明.md#)。|
 |存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../intl.zh-CN/.md#)。|
