--- a/cn.zh-CN/用户指南/总览.md
+++ b/cn.zh-CN/用户指南/总览.md
@@ -4,23 +4,35 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155805655337206_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155952738537206_zh-CN.jpg)
 
 **总览**页面展示以下模块：
 
--   云安全中心的版本信息，提供升级高级版、企业版、扩充资产规模和续费操作。
+-   云安全中心的版本信息，提供**升级**高级版、企业版、扩充资产规模和**续费**操作。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155952738548508_zh-CN.png)
+
 -   **安全评分**：您资产的安全分值以及受保护/未受保护资产数量。具体评分分值参见安全分值表。
 
-    单击**立即处理**可展开安全风险处理页面，您可根据页面的提示参考对应的帮助文档或直接对风险立即处理。
+    单击**立即处理**可展开安全风险处理页面，您可根据页面的提示参考对应的帮助文档或直接对风险立即处理。安全风险处理包含所有需要您尽快处理的安全风险和威胁，包含以下类别：
 
-    单击**未保护资产**下的数字，可以跳转到安装/卸载插件页面，您可以将未受保护的资产接入云安全中心的安全防护内。
+    -   待处理告警
+    -   待修复漏洞
+    -   基线检查
+    -   云产品最佳实践（云产品安全风险项）
+    -   攻击事件等其他风险或威胁
+-   查看您已安装和未安装Agent插件的资产数量，也就是已在云安全中心防护范围内的资产和还未受云安全中心防护的资产数量。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/155952738548509_zh-CN.png)
+
+    单击**未保护资产**下的数字，可以跳转到安装/卸载插件页面，您可以将未受保护的资产接入云安全中心的安全防护内。有关Agent安装的详细操作，参见[安装Agent](../../../../intl.zh-CN/接入云安全中心/安装Agent.md#)。
 
 -   查看威胁统计数据：
     -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警处理/安全告警类型.md#)页面。
     -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。详见[漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。
     -   **基线问题**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线问题总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
--   **云安全最佳实践检查**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云安全最佳实践检查页面。
+-   **云安全最佳实践检查**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云安全最佳实践检查页面。详细操作参见[云平台最佳实践](intl.zh-CN/用户指南/云平台最佳实践.md#)。
 -   **安全运营**：展示15天内已处理的告警、漏洞、基线配置数量柱状图和趋势图。
 
 ## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
@@ -51,7 +63,7 @@
 |保护状态为离线（Agent未安装或离线）。|[安装Agent](../../../../intl.zh-CN/接入云安全中心/Agent说明.md#)。|
 |存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../intl.zh-CN/.md#)。|
 |存在系统软件漏洞。|修复[软件漏洞](../../../../intl.zh-CN/.md#)。|
-|基线检查存在风险。|修复基线检查漏洞。|
+|基线检查存在风险。|修复基线检查漏洞。详细操作参见[执行基线检测](intl.zh-CN/用户指南/基线检查/执行基线检测.md#)。|
 |存在异常登录事件。|查看并处理[异常登录](../../../../intl.zh-CN/用户指南/入侵检测/异常登录.md#)。|
 |存在网站后门威胁。|查看和处理[网站后门](../../../../intl.zh-CN/用户指南/入侵检测/网站后门.md#)文件。|
 |存在主机异常。|对主机异常事件进行处理。|
