--- a/cn.zh-CN/用户指南/安全告警处理/查看告警溯源和排查方案.md
+++ b/cn.zh-CN/用户指南/安全告警处理/查看告警溯源和排查方案.md
@@ -1,24 +1,24 @@
 # 查看告警溯源和排查方案 {#concept_m13_lbx_bgb .concept}
 
-云安全中心支持自动化攻击溯源，您可通过告警溯源快速定位到攻击来源和攻击产生的原因。
+云安全中心支持自动化攻击溯源，可对攻击进行自动溯源并提供原始数据预览，帮助您快速定为到攻击来源、发现入侵原因，并对弱点进行修复。
 
 您可在安全告警处理页面页面单击**溯源**图标，打开溯源页签查看攻击溯源详情，包括入侵原因和攻击请求的详细内容，并为您提供排查建议。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155952741248512_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155953390648512_zh-CN.png)
 
 ## 操作步骤 {#section_pxz_mbx_bgb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏单击**安全告警处理**。
-3.  在**安全告警处理**页面，定位到有溯源图标的告警事件，并单击告警溯源图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155952741248510_zh-CN.png)，打开该告警事件的溯源页面。
+3.  在**安全告警处理**页面，定位到有溯源图标的告警事件，并单击告警溯源图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155953390648510_zh-CN.png)，打开该告警事件的溯源页面。
 
     您可在告警溯源页面查看攻击告警名称、告警类型、影响的资源、攻击源IP、HTTP请求详情和攻击请求的详细内容。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155952741248511_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155953390648511_zh-CN.png)
 
     在溯源可视图中，您可以查看该攻击溯源事件整个链路中各个节点的信息。单击各个节点，会展示该节点的属性页面，您可以查看该节点的相关信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155952741248513_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155953390748513_zh-CN.png)
 
 
 ## 告警溯源案例 {#section_qrk_ttd_p3d .section}
@@ -29,16 +29,16 @@
 
     下图描述了蠕虫传播源185.234.216.52通过SSH暴力破解成功登录到主机，并通过bash执行curl指令从远端下载挖矿程序并执行。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155952741345771_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155953390745771_zh-CN.png)
 
 -   WEB漏洞入侵事件
 
     黑客通过202.144.193.8服务器发起攻击，通过WEB漏洞向Linux服务器植入恶意shell脚本和挖矿程序，同时将代码写入计划任务（crond）实现攻击持久化。您可以通过溯源页面的节点信息，清晰地了解这一过程。此外，还可以观察到攻击者的多个IP及恶意下载源URL信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155952741345773_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155953390745773_zh-CN.png)
 
     点击图中HTTP攻击节点查看详细信息。流量数据表明入侵者通过Apache Solr未授权访问漏洞控制API接口执行系统命令，您可以针对此漏洞进行快速修复。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155952741345774_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78657/155953390745774_zh-CN.png)
 
 
