--- a/cn.zh-CN/用户指南/基线检查/基线检查概述.md
+++ b/cn.zh-CN/用户指南/基线检查/基线检查概述.md
@@ -6,7 +6,7 @@
 
 使用基线检查功能可自动检测服务器上的系统、账号、数据库、弱密码、合规性配置中存在的风险点，并提供加固建议。具体检测内容参见下方[基线检测内容](intl.zh-CN/用户指南/基线检查/基线检查概述.md#table_brz_4q1_f2b)。
 
-基线检查默认每天6:00-12:00进行一次全面的自动检测。您可以自行添加和管理基线扫描策略，自定义需要检查的基线项目、检查周期、检测触发时间和应用该策略的服务器。
+基线检查默认每天00:00-06:00进行一次全面的自动检测。您可以自行添加和管理基线扫描策略，自定义需要检查的基线项目、检查周期、检测触发时间和应用该策略的服务器。
 
 ## 限制说明 {#section_sng_3xk_dhb .section}
 
@@ -18,7 +18,7 @@
 
 |基线检查项分类|检测项|
 |-------|---|
-|数据库|Redis合规检查、数据库高危配置|
+|数据库|检测Redis、Memcached高危监听配置风险以及启动权限配置风险。|
 |系统|等保合规基线检查对标中国等保2.0第二/三等级保护基本要求的部分检查项目；安全基线检查对标阿里云、CIS标准：-   CentOS Linux 6/7等保合规基线检查和安全基线检查
 -   Linux Ubuntu等保合规基线检查和安全基线检查
 -   Debian Linux等保合规基线检查和安全基线检查
