--- a/cn.zh-CN/常见问题/如何查看我已开启了哪些防御能力？.md
+++ b/cn.zh-CN/常见问题/如何查看我已开启了哪些防御能力？.md
@@ -4,7 +4,11 @@
 
 您可在云安全中心控制台安全告警处理页面，查看已开启和未开启的防御项目。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/380589/155954075148522_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/380589/155954140748522_zh-CN.png)
+
+已开启的防御项默认不展示，您可在安全告警处理页面单击图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/380589/155954140748519_zh-CN.png)，展开防御能力列表。
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/380589/155954140748520_zh-CN.png)
 
 除应用白名单和网页防篡改告警类型以外，云安全中心默认为用户开启所有的告警事件防御能力。
 
@@ -12,12 +16,8 @@
 
 -   基础版用户默认只开启**异常登录**的防御能力。如需开通其他防御能力，需**升级**到高级版或 企业版。有关升级的相关内容，参见[服务续费与升级](../../../../intl.zh-CN/产品定价/服务续费与升级.md#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155954075148526_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155954140748526_zh-CN.png)
 
 -   应用白名单和网页防篡是云安全中心的增值服务，需要您单独购买开通后才会开启应用白名单和网页防篡改的防御。网页防篡改为企业版功能，高级版不支持该功能。应用白名单详细操作参见[应用白名单](../../../../intl.zh-CN/用户指南/应用白名单.md#)；网页防篡改详细操作参见网页防篡改[开通服务](../../../../intl.zh-CN/用户指南/网页防篡改/开通服务.md#)。
 -   云产品威胁检测为企业版功能，企业版自动开启防御；高级版需要升级至企业版后才能自动开启防御。
-
-**说明：** 已开启的防御项默认不展示，您可在安全告警处理页面单击图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/380589/155954075148519_zh-CN.png)，展开防御能力列表。
-
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/380589/155954075148520_zh-CN.png)
 
