--- a/intl.zh-CN/用户指南/网页防篡改/开启网页防篡改保护.md
+++ b/intl.zh-CN/用户指南/网页防篡改/开启网页防篡改保护.md
@@ -2,72 +2,99 @@
 
 云安全中心高级版和企业版可对主机开启网页防篡改防护，全面保护您网站的安全。
 
-**说明：** 在网页防篡改页面添加主机后，主机的网页防篡改防护是默认关闭状态的。您需要开启目标主机的防护状态，网页防篡改功能才会生效。详见[步骤三 开启防护](#)。
+您需在购买网页防篡改授权配额数后，添加需要防护的服务器及其目录。
 
-## 步骤一 添加主机 {#section_osb_2h3_3gb .section}
+**说明：** 在网页防篡改页面添加主机后，主机的网页防篡改防护是默认关闭状态的。您需要开启目标服务器的防护状态，网页防篡改功能才会生效。详见**操作步骤**第9步。
+
+## 前提条件 {#section_f8p_dke_8kz .section}
+
+使用网页防篡改服务前，需确保您当前账号有足够的网页防篡改配额。您可在云安全中心控制台网页防篡改页面右上角，查看您当前的配额数、已消耗的配额数和配额有效期。
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019448735_zh-CN.png)
+
+**说明：** 
+
+-   1个网页防篡改配额可防护1台服务器，也就是添加防护后并开启防篡改防护的服务器数量。
+-   网页防篡改配额有使用期限的限制，您需要在有效期内使用完授权配额。超过有效期后，该授权配额将自动失效。
+
+如果配额不足，可在云安全中心控制台网页防篡改页面，单击右上角**购买配额**，在购买页面购买**防篡改授权数**。
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019448733_zh-CN.png)
+
+## 限制条件 {#section_yxo_3zs_r87 .section}
+
+-   每台服务器最多可添加10个防护目录。
+-   Windows系统单个防护目录大小不超过20G；单个防护目录下的文件夹个数不超过20000个；防护目录文件夹层级不超过20个；单文件大小不超过3MB。
+-   Linux系统单个防护目录大小不超过20G；单个防护目录下的文件夹个数不超过3000个；防护目录文件夹层级不超过20个；单文件大小不超过3MB。
+-   建议您开启防护前检查文件夹目录层级、文件夹个数和防护目录大小是否超过限制。
+-   建议您排除 log、png、jpg、mp4、avi、mp3等无需进行防护的文件类型（多个文件类型之间用分号隔开）。
+-   授权配额为0时，您将无法添加新的防护服务器。如果有无需防护的服务器，可以暂时关闭该服务器的**防护状态**。关闭防护后，将会释放出对应数量的可用授权配额，以便您添加新的服务器。例如：关闭1台服务器的防护状态，将会释放出1个可用授权配额。
+
+## 操作步骤 {#section_osb_2h3_3gb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  定位到**应用市场** \> **网页防篡改**。
+2.  定位到**应用市场** \> **网页防篡改**，完成服务开通。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141295/155411063641008_zh-CN.png)
+    **说明：** 基础版用户需升级到高级版或企业版时，购买网页防篡改服务。
 
-3.  在网页防篡改页面单击左上角**添加主机**。
+3.  在网页防篡改页面单击左上角**为服务器添加防护**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063742140_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542140_zh-CN.png)
 
-4.  在添加主机对话框中勾选目标主机，单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063742144_zh-CN.png)按钮将目标主机添加到右侧的**已添加**列表中。
+4.  在创建网页防篡改对话框中勾选目标服务器。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063742149_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542149_zh-CN.png)
 
-5.  单击对话框右下角的**添加**，将目标主机添加到网页篡改防护列表中。
+    **说明：** 授权配额为0时，您将无法添加新的防护服务器。如果有无需防护的服务器，可以暂时关闭该服务器的**防护状态**。关闭防护后，将会释放出对应梳理的可用授权配额，以便您添加新的服务器。例如：关闭1台服务器的防护状态，将会释放出1个可用授权配额。
 
-    **说明：** 添加主机后，主机的网页防篡改防护是**默认关闭**状态的。您需要在网页防篡改页面开启目标主机的防护状态。
+5.  单击**下一步**，添加防护目录。
 
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542149_zh-CN.png)
 
-## 步骤二 添加防护目录 {#section_zhs_gkm_dhb .section}
+6.  在添加防护目录页签中，完成以下配置。
 
-1.  在网页防篡改页面单击目标服务器左侧的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063742152_zh-CN.png)按钮打开**防护目录**列表。
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542157_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063742153_zh-CN.png)
+    选择防护模式。可选白名单模式和黑名单模式。白名单模式下，会对添加的防护目录和文件类型进行保护；黑名单模式下，会对防护目录下，所有未排除的子目录、文件类型、指定文件进行保护。默认开启白名单模式。
 
-2.  单击**添加**打开添加防护目录对话框。
+    -   白名单模式配置：
+        -   **防护目录**：手动输入该服务器下需要开启防篡改保护的目录地址。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063842156_zh-CN.png)
+            **说明：** Linux服务器和Windows服务器防护目录地址的格式可能会有区别，请根据页面提示输入正确的格式。
 
-3.  配置添加防护目录对话框。
+        -   **防护文件类型**：单击下拉框，勾选该目录中需要防护的文件类型，例如：js、html、xml、jpg等。
+        -   **本地备份目录**：展示该目录下的默认备份存储路径。云安全中心为您指定的默认备份目录为/usr/local/aegis/bak（Linux服务器）和C:\\Program Files \(x86\)\\Alibaba\\Aegis\\bak（Windows服务器），您可手动修改默认的备份路径。
+    -   黑名单防护模式：
+        -   **防护目录**：手动输入该服务器下需要开启防篡改保护的目录地址。
+        -   **排除子目录**：无需开启网页防篡改的子目录地址。手动输入，多个目录之间用半角分号隔开。输入排除子目录后，云安全中心将不会对该子目录中的文件进行防护。
+        -   **排除文件类型**：无需进行网页防篡改检测的文件格式。手动输入，多个文件类型之间用半角分号隔开。输入排除文件类型后，云安全中心将不会对该防护目录下，该类型的文件进行防护。
+        -   **本地备份目录**：展示该目录下的默认备份存储路径。云安全中心为您指定的默认备份目录为/usr/local/aegis/bak（Linux服务器）和C:\\Program Files \(x86\)\\Alibaba\\Aegis\\bak（Windows服务器），您可手动修改默认的备份路径。
+7.  单击**开启防护**，完成添加服务器和目录的操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063842157_zh-CN.png)
+    添加服务器完成后，该服务器将显示在网页防篡改页面的防护服务器列表中。
 
-    -   **防护目录**：需要开启网页防篡改的目录地址。可以手动输入防护目录，也可以在下拉列表中选择目标目录。
-    -   **排除子目录**：无需开启网页防篡改的子目录地址。手动输入，多个目录之间用半角分号隔开。
-    -   **排除文件类型**：无需进行网页防篡改检测的文件名称。手动输入，多个文件类型之间用半角分号隔开。
-    -   **本地备份目录**：显示默认的本地备份目录地址。建议不要修改本地备份目录。
-    **说明：** 
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548747_zh-CN.png)
 
-    -   添加的目录都必须是包含文件的、真实和独立存在的目录。
-    -   两个防护目录不可以互为备份目录。
-4.  单击**确定**，保存防护目录配置。
+    **说明：** 添加服务器后，服务器的网页防篡改防护是**默认关闭**状态的。您需要在网页防篡改页面**开启**目标服务器的防护状态。
 
-    **说明：** 
+8.  在防篡改防护列表中，单击目标服务器**防护状态**开关，为该服务器开启防护服务。
 
-    -   每台服务器最多可添加10个防护目录。
-    -   Windows系统单个防护目录大小不超过20G；单个防护目录下的文件夹个数不超过20000个；防护目录文件夹层级不超过20个；单文件大小不超过3MB。Linux系统单个防护目录大小不超过20G；单个防护目录下的文件夹个数不超过3000个；防护目录文件夹层级不超过20个；单文件大小不超过3MB。
-    -   建议您开启防护前检查文件夹目录层级、文件夹个数和防护目录大小是否超过限制。
-    -   建议您排除 log、png、jpg、mp4、avi、mp3等无需进行防护的文件类型（多个文件类型之间用分号隔开）。
-    -   如需删除不必进行网页防篡改检测的目录，可在防护目录列表页面单击目标目录最右侧**删除**，删除该防护目录及配置信息。
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548754_zh-CN.png)
 
-## 步骤三 开启防护 {#step3 .section}
+    首次开启防护时，目标主机的服务状态将会显示为**启动中**，并显示启动进度条。请耐心等待数秒，启动成功后服务状态将会显示为**正在运行**。
 
-1.  在网页防篡改页面单击目标主机最右侧**防护状态**下的开关，开启防护服务。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063842160_zh-CN.png)
-
-    首次开启防护时，目标主机的服务状态将会显示为**启动中**。请耐心等待数秒，启动成功后服务状态将会显示为**正在运行**。
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548755_zh-CN.png)
 
     **说明：** 当防护服务状态为异常时，在目标主机服务状态栏单击**异常**，显示异常状态的详细原因并单击**重试**。详见[防护异常状态处理](#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155411063842159_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542159_zh-CN.png)
 
+
+## 后续操作 {#section_tk1_0sl_szt .section}
+
+为服务器开启网页防篡改保护后，您可在安全告警处理页面，筛选网页防篡改类型，查看云安全中心为您检测到的网页篡改事件和告警信息。
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548739_zh-CN.png)
 
 ## 防护异常状态处理 {#abnormal .section}
 
