--- a/cn.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/cn.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -9,6 +9,7 @@
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
+-   [Agent相关FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/Agent相关FAQ.md#)
 -   [安装Agent提示“Permission denied”错误](intl.zh-CN/常见问题/常见问题隐藏目录/Agent相关FAQ.md#1)
 -   [金融云、VPC用户安装Agent](../../../../intl.zh-CN/接入云安全中心/金融云、VPC用户安装Agent.md#)
 -   [如何在非阿里云服务器上使用云安全中心？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在非阿里云服务器上使用云安全中心？.md#)
