--- a/intl.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/intl.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -22,6 +22,10 @@
 -   [云服务器 ECS 中病毒或被木马入侵了怎么办](../../../../intl.zh-CN/常见问题/操作运维 Windows/病毒安全/云服务器 ECS 中病毒或被木马入侵了怎么办.md#)
 -   [在ECS中对云安全中心服务端地址进行加白](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS中对云安全中心服务端地址进行加白.md#)
 
+## 网站异常相关问题 {#section_tn8_iv0_03i .section}
+
+-   [使用云安全中心后，网站被黑客入侵的排查步骤](intl.zh-CN/常见问题/常见问题隐藏目录/使用云安全中心后，网站被黑客入侵的排查步骤.md#)
+
 ## 安全告警相关问题 {#section_q25_5b6_xyk .section}
 
 -   [如何查看我已开启了哪些防御能力？](intl.zh-CN/常见问题/常见问题隐藏目录/如何查看我已开启了哪些防御能力？.md#)
@@ -30,6 +34,7 @@
 -   [基础版用户收到通知提示发现网站后门等威胁该怎么办？](intl.zh-CN/常见问题/常见问题隐藏目录/基础版用户收到通知提示发现网站后门等威胁该怎么办？.md#)
 -   [如何在云安全中心找到网站后门检测的功能？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在云安全中心找到网站后门检测的功能？.md#)
 -   [哪些类型的异常支持自动查杀而无需手动处理？](intl.zh-CN/常见问题/常见问题隐藏目录/哪些类型的异常支持自动查杀而无需手动处理？.md#)
+-   [安全告警FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/安全告警FAQ.md#)
 
 ## 异常登录相关问题 {#section_dpg_5gj_ygx .section}
 
@@ -56,11 +61,14 @@
 -   [软件漏洞功能收费说明](intl.zh-CN/常见问题/常见问题隐藏目录/软件漏洞功能收费说明.md#)
 -   [漏洞扫描周期说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描周期说明.md#)
 -   [服务器软件漏洞修复最佳实践](intl.zh-CN/常见问题/常见问题隐藏目录/服务器软件漏洞修复最佳实践.md#)
+-   [漏洞扫描FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描FAQ.md#)
+-   [Wget缓冲区溢出漏洞检测命中规则说明](intl.zh-CN/常见问题/常见问题隐藏目录/Wget缓冲区溢出漏洞检测命中规则说明.md#)
 
 ## 基线相关问题 {#section_s9l_3an_gwn .section}
 
 -   [基线检查风险项修复建议](intl.zh-CN/常见问题/常见问题隐藏目录/基线检查风险项修复建议.md#)
 -   [基线检查验证失败如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/基线检查验证失败如何处理？.md#)
+-   [基线核查FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/基线核查FAQ.md#)
 
 ## 日志相关问题 {#section_fmb_l6r_1pm .section}
 
@@ -70,6 +78,11 @@
 
 -   [如何降低产品配置？](intl.zh-CN/常见问题/常见问题隐藏目录/如何降低产品配置？.md#)
 -   [联通沃云购买企业版失败](intl.zh-CN/常见问题/常见问题隐藏目录/联通沃云购买企业版失败.md#)
+-   [如何购买云安全中心情报资源包？](intl.zh-CN/常见问题/常见问题隐藏目录/如何购买云安全中心情报资源包？.md#)
+
+## AK和账密泄露相关问题 {#section_d5x_iij_cns .section}
+
+-   [高危敏感信息泄露处置方案](intl.zh-CN/常见问题/常见问题隐藏目录/高危敏感信息泄露处置方案.md#)
 
 ## 其他使用问题 {#section_x04_cz8_fvl .section}
 
