--- a/cn.zh-CN/产品定价/服务续费与升级.md
+++ b/cn.zh-CN/产品定价/服务续费与升级.md
@@ -20,9 +20,7 @@
 
     **说明：** 续费操作不支持调整资产规模（即实例保有量），以当前配置为准。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13628/15530134544471_zh-CN.png)
-
-4.  勾选同意**《云安全中心SAS（包月）服务协议》**，单击**去支付**，并完成支付。
+4.  单击**去支付**，并完成支付。
 
 ## 升级说明 {#section_syq_dcc_zdb .section}
 
@@ -39,12 +37,12 @@
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  前往总览页，单击页面右上角的**升级**。
 
-    **说明：** 只有当您的服务器数量超过当前配置中资产规模的120%时，总览页右上角才会出现**升级**按钮。
+    **说明：** 只有当您的服务器数量是当前配置中资产规模的120%时，总览页右上角才会出现**升级**按钮。
 
 3.  选择实际资产规模，单击**去支付**。
 4.  完成支付。
 
 ## 开通与购买日志分析服务 {#section_zh3_2yl_kfb .section}
 
-云安全中心**企业版**支持全量日志分析服务，使用日志分析服务前需开通和购买服务。详细信息参见[开通日志分析服务](../../../../../cn.zh-CN/用户指南/日志分析/开通日志分析服务.md#section_hb4_p5l_kfb)。
+云安全中心**企业版**支持全量日志分析服务，使用日志分析服务前需开通和购买服务。详细信息参见[开通日志分析服务](../../../../intl.zh-CN/用户指南/日志分析/开通日志分析服务.md#section_hb4_p5l_kfb)。
 
