--- a/intl.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/intl.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -2,10 +2,11 @@
 
 本文档介绍了阿里云云安全中心各类常见问题和对应的解决方案。
 
-## 购买、续费相关问题 {#section_zzx_igb_qj6 .section}
+## 购买、续费相关问题 {#section_vqr_ejj_rmh .section}
 
 -   [如何降低产品配置？](intl.zh-CN/常见问题/常见问题隐藏目录/如何降低产品配置？.md#)
 -   [联通沃云购买企业版失败](intl.zh-CN/常见问题/常见问题隐藏目录/联通沃云购买企业版失败.md#)
+-   [如何购买云安全中心情报资源包？](intl.zh-CN/常见问题/常见问题隐藏目录/如何购买云安全中心情报资源包？.md#)
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
@@ -26,6 +27,7 @@
 ## 网站异常相关问题 {#section_tn8_iv0_03i .section}
 
 -   [使用云安全中心后，网站被黑客入侵的排查步骤](intl.zh-CN/常见问题/常见问题隐藏目录/使用云安全中心后，网站被黑客入侵的排查步骤.md#)
+-   [如何预防网站被挂马、从而导致网站被封?](intl.zh-CN/常见问题/常见问题隐藏目录/如何预防网站被挂马、从而导致网站被封?.md#)
 
 ## 安全告警相关问题 {#section_q25_5b6_xyk .section}
 
@@ -36,6 +38,7 @@
 -   [如何在云安全中心找到网站后门检测的功能？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在云安全中心找到网站后门检测的功能？.md#)
 -   [哪些类型的异常支持自动查杀而无需手动处理？](intl.zh-CN/常见问题/常见问题隐藏目录/哪些类型的异常支持自动查杀而无需手动处理？.md#)
 -   [安全告警FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/安全告警FAQ.md#)
+-   [云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？.md#)
 
 ## 异常登录相关问题 {#section_dpg_5gj_ygx .section}
 
@@ -74,12 +77,6 @@
 ## 日志相关问题 {#section_fmb_l6r_1pm .section}
 
 -   [查看云安全中心Aegis的日志](intl.zh-CN/常见问题/常见问题隐藏目录/查看云安全中心Aegis的日志.md#)
-
-## 购买、续费相关问题 {#section_cu7_ry9_rwr .section}
-
--   [如何降低产品配置？](intl.zh-CN/常见问题/常见问题隐藏目录/如何降低产品配置？.md#)
--   [联通沃云购买企业版失败](intl.zh-CN/常见问题/常见问题隐藏目录/联通沃云购买企业版失败.md#)
--   [如何购买云安全中心情报资源包？](intl.zh-CN/常见问题/常见问题隐藏目录/如何购买云安全中心情报资源包？.md#)
 
 ## AK和账密泄露相关问题 {#section_d5x_iij_cns .section}
 
