--- a/cn.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/cn.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -67,6 +67,7 @@
 -   [服务器软件漏洞修复最佳实践](intl.zh-CN/常见问题/常见问题隐藏目录/服务器软件漏洞修复最佳实践.md#)
 -   [漏洞扫描FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描FAQ.md#)
 -   [Wget缓冲区溢出漏洞检测命中规则说明](intl.zh-CN/常见问题/常见问题隐藏目录/Wget缓冲区溢出漏洞检测命中规则说明.md#)
+-   [为什么我在控制台里看不到漏洞或指定设备的漏洞？](intl.zh-CN/常见问题/常见问题隐藏目录/为什么我在控制台里看不到漏洞或指定设备的漏洞？.md#)
 
 ## 基线相关问题 {#section_s9l_3an_gwn .section}
 
